--- a/FINAL_2.ipynb
+++ b/FINAL_2.ipynb
@@ -1,16 +1,6 @@
 {
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/JADE3624/Final_project/blob/main/FINAL_2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -5357,8 +5347,7 @@
       "machine_shape": "hm",
       "toc_visible": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyM4KAEniGztiS1uj58cQ/2j",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyM4KAEniGztiS1uj58cQ/2j"
     },
     "kernelspec": {
       "display_name": "Python 3",
